# GitHubActionsTest

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: libSampleApi.h
sample/: main.cpp
src/include/: libSampleCoreLib.h
src/libSampleApi/: libSampleApi.cpp
src/libSampleCoreLib/: libSampleCoreLib.cpp
test/: test.cpp
